<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="ma_billtotal">Bill Total</string>
    <string name="ma_tip">Tip %</string>
    <string name="ma_rg_10">10%</string>
    <string name="ma_rg_15">15%</string>
    <string name="ma_rg_18">18%</string>
    <string name="ma_rg_custom">Custom</string>
    <string name="ma_lbl_custom">Custom</string>
    <string name="ma_lbl_tip">Tip</string>
    <string name="ma_lbl_total">Total</string>
    <string name="ma_btn_exit">Exit</string>
    <string name="ma_et_hint">Enter Bill Value</string>

</resources>
